[package]
name = "japanmesh"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/MIERUNE/japanmesh-rs"
authors = ["Taku Fukada <naninunenor@gmail.com>", "MIERUNE Inc. <info@mierune.co.jp>"]
license = "MIT"
description = "Utilities for Japanese Grid Square Code (JIS X 0410:2002 地域メッシュコード)"

[dependencies]
thiserror = "2.0.12"

[dev-dependencies]
clap = { version = "4.5.34", features = ["derive"] }
flatgeobuf = { version = "4.6.0", default-features = false }
geo = { version = "0.30.0", default-features = false }
geozero = { version = "0.14.0" }
flate2 = "1.0.28"
indexmap = "2.8.0"
glob = "0.3.2"
